--- a/Sample_ML_Submission_Template.ipynb
+++ b/Sample_ML_Submission_Template.ipynb
@@ -241,7 +241,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/Subham15-11/paisabazaar/blob/main/Sample_ML_Submission_Template.ipynb"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -387,7 +387,7 @@
       "metadata": {
         "id": "M8Vqi-pPk-HR"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -430,7 +430,7 @@
         },
         "outputId": "0a589a10-2d4b-4ed3-be76-f5caef119b90"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,7 +458,7 @@
         },
         "outputId": "b1d56e85-d1a3-41a7-918d-0bd804fa2d97"
       },
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -918,7 +918,7 @@
         },
         "outputId": "f4781ab2-43e3-4dd4-8cdf-7a907decce31"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -954,7 +954,7 @@
         },
         "outputId": "4c6b7e90-d27f-4739-a109-b706bfa52b26"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,7 +1021,7 @@
         },
         "outputId": "7e50404d-fb4a-44e1-8551-a8187bbb2a1b"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1058,7 +1058,7 @@
         },
         "outputId": "1f5a77e4-46d4-4e84-e3de-6d5a3d7b5894"
       },
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1254,7 +1254,7 @@
         },
         "outputId": "c4d4fcfb-859e-46fb-bb38-c8b456079982"
       },
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1318,7 +1318,7 @@
         },
         "outputId": "9dcacb16-6df2-4070-900c-252569023c6a"
       },
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1355,7 +1355,7 @@
         },
         "outputId": "b43d6ce0-33cf-42ec-cb9a-745b05481227"
       },
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1913,7 +1913,7 @@
         "id": "B1P5BuPR9Ufo",
         "outputId": "e9d9ad7b-3355-4eee-95a9-5d5c2126ad07"
       },
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1969,7 +1969,7 @@
         },
         "outputId": "4309741b-272a-4e0b-98e7-4e3f6ac487cb"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2149,7 +2149,7 @@
       "metadata": {
         "id": "wk-9a2fpoLcV"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2196,7 +2196,7 @@
       "metadata": {
         "id": "7v_ESjsspbW7"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2271,7 +2271,7 @@
       "metadata": {
         "id": "R4YgtaqtYklH"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2346,7 +2346,7 @@
       "metadata": {
         "id": "t6GMdE67YoAp"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2421,7 +2421,7 @@
       "metadata": {
         "id": "irlUoxc8YrdO"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2496,7 +2496,7 @@
       "metadata": {
         "id": "TIJwrbroYuh3"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2571,7 +2571,7 @@
       "metadata": {
         "id": "kuRf4wtuphqN"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2646,7 +2646,7 @@
       "metadata": {
         "id": "lqAIGUfyphqO"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2721,7 +2721,7 @@
       "metadata": {
         "id": "TdPTWpAVphqO"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2796,7 +2796,7 @@
       "metadata": {
         "id": "B2aS4O1ophqO"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2871,7 +2871,7 @@
       "metadata": {
         "id": "GM7a4YP4phqQ"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2946,7 +2946,7 @@
       "metadata": {
         "id": "mAQTIvtqp1cj"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3021,7 +3021,7 @@
       "metadata": {
         "id": "bwevp1tKp1ck"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3096,7 +3096,7 @@
       "metadata": {
         "id": "EUfxeq9-p1cl"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3171,7 +3171,7 @@
       "metadata": {
         "id": "xyC9zolEZNRQ"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3227,7 +3227,7 @@
       "metadata": {
         "id": "o58-TEIhveiU"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3337,7 +3337,7 @@
       "metadata": {
         "id": "oZrfquKtyian"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3420,7 +3420,7 @@
       "metadata": {
         "id": "sWxdNTXNpUZe"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3503,7 +3503,7 @@
       "metadata": {
         "id": "s6AnJQjtpZyI"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3568,7 +3568,7 @@
       "metadata": {
         "id": "iRsAHk1K0fpS"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3606,7 +3606,7 @@
       "metadata": {
         "id": "M6w2CzZf04JK"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3644,7 +3644,7 @@
       "metadata": {
         "id": "21JmIYMG2hEo"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3692,7 +3692,7 @@
       "metadata": {
         "id": "PTouz10C3oNN"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3712,7 +3712,7 @@
       "metadata": {
         "id": "88JnJ1jN3w7j"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3732,7 +3732,7 @@
       "metadata": {
         "id": "vqbBqNaA33c0"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3752,7 +3752,7 @@
       "metadata": {
         "id": "2sxKgKxu4Ip3"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3772,7 +3772,7 @@
       "metadata": {
         "id": "T2LSJh154s8W"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3783,7 +3783,7 @@
       "metadata": {
         "id": "EgLJGffy4vm0"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3803,7 +3803,7 @@
       "metadata": {
         "id": "foqY80Qu48N2"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3823,7 +3823,7 @@
       "metadata": {
         "id": "ijx1rUOS5CUU"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3843,7 +3843,7 @@
       "metadata": {
         "id": "AIJ1a-Zc5PY8"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3881,7 +3881,7 @@
       "metadata": {
         "id": "btT3ZJBAO6Ik"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3901,7 +3901,7 @@
       "metadata": {
         "id": "yBRtdhth6JDE"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3948,7 +3948,7 @@
       "metadata": {
         "id": "h1qC4yhBApWC"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3968,7 +3968,7 @@
       "metadata": {
         "id": "YLhe8UmaBCEE"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4033,7 +4033,7 @@
       "metadata": {
         "id": "I6quWQ1T9rtH"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4053,7 +4053,7 @@
       "metadata": {
         "id": "dL9LWpySC6x_"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4100,7 +4100,7 @@
       "metadata": {
         "id": "kQfvxBBHDvCa"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4138,7 +4138,7 @@
       "metadata": {
         "id": "0CTyd2UwEyNM"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4194,7 +4194,7 @@
       "metadata": {
         "id": "nQsRhhZLFiDs"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4245,7 +4245,7 @@
       "metadata": {
         "id": "7ebyywQieS1U"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4265,7 +4265,7 @@
       "metadata": {
         "id": "rqD5ZohzfxKe"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4289,7 +4289,7 @@
       "metadata": {
         "id": "Dy61ujd6fxKe"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4354,7 +4354,7 @@
       "metadata": {
         "id": "yEl-hgQWpsJ1"
       },
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4378,7 +4378,7 @@
       "metadata": {
         "id": "Dn0EOfS6psJ2"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4456,7 +4456,7 @@
       "metadata": {
         "id": "FFrSXAtrpx6M"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4476,7 +4476,7 @@
       "metadata": {
         "id": "xIY4lxxGpx6M"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4500,7 +4500,7 @@
       "metadata": {
         "id": "eSVXuaSKpx6M"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4619,7 +4619,7 @@
       "metadata": {
         "id": "bQIANRl32f4J"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4639,7 +4639,7 @@
       "metadata": {
         "id": "oEXk9ydD2nVC"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4686,7 +4686,7 @@
       "source": [
         "!pip install gdown -q"
       ],
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4706,7 +4706,7 @@
         "\n",
         "!gdown --id {file_id} -O {file_name}"
       ],
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4731,7 +4731,7 @@
         "# Load Dataset\n",
         "data = pd.read_csv(file_name)"
       ],
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": []
     }
   ]
