--- a/Sample_ML_Submission_Template.ipynb
+++ b/Sample_ML_Submission_Template.ipynb
@@ -4061,7 +4061,11 @@
         "\n",
         "Check correlation coefficient (r):\n",
         "\n",
-        "0.0 - 0.3 → weak"
+        "0.0 - 0.3 → weak\n",
+        "\n",
+        "0.3 – 0.6 → moderate\n",
+        "\n",
+        "0.6 – 1.0 → strong"
       ],
       "metadata": {
         "id": "4xOGYyiBpUZf"
